Allow options to span multiple bits